# latex_cleaner

./: Cargo.toml  README.MD
src/: README.MD  file_matcher.rs  main.rs
